cmake_minimum_required(VERSION 3.20)
project(untitled12 CXX)
set(CMAKE_CXX_STANDARD 17)

add_executable(untitled12
        main.cpp
        Hotel.cpp
        Hotel.h
        Address.cpp
        Address.h
        Menu.cpp
        Menu.h
        Rooms.cpp
        Rooms.h
        Search.cpp
        Search.h
        Person.cpp
        Person.h
        Search2.cpp
        Search2.h
        Cancel.cpp
        Cancel.h
        CheckOut.cpp
        CheckOut.h
        Service.cpp
        Service.h

)
